<resources>
    <string name="app_name">CryptoApp</string>
    <string name="name">Nombre:</string>
    <string name="symbol">Simbolo:</string>
    <string name="status">Estado:</string>
    <string name="rank">Ranking:</string>
    <string name="price">Precio:</string>
    <string name="price_date">Fecha del precio: </string>
    <string name="price_timestamp">Marca de tiempo del precio: </string>
    <string name="circulating_supply">Suministro Circulante: </string>
    <string name="market_cap">Mercado: </string>
    <string name="num_exchanges">Numero de intercambios: </string>
    <string name="num_pairs">Numero de pares: </string>
    <string name="num_pairs_unmapped">Num pares no mapeados: </string>
    <string name="first_candle">Primer Grafico: </string>
    <string name="first_trade">Primer Intercambio: </string>
    <string name="first_order_book">Primer Pedido: </string>
    <string name="rank_delta">Ranking Delta: </string>
    <string name="high">Alto: </string>
    <string name="high_timestamp">Fecha del Alto: </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detalle">Detalle</string>
    <string name="enviar_correo">Solicitar: </string>



</resources>