<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    android:background="@color/primary"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout">

        <TextView
            android:id="@+id/txtDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/name"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="414dp"
            android:layout_height="305dp"
            tools:layout_editor_absoluteX="-3dp"
            tools:layout_editor_absoluteY="55dp"
            tools:srcCompat="@drawable/header"
            app:layout_constraintEnd_toEndOf="@+id/txtDetailName"
            app:layout_constraintStart_toStartOf="@+id/txtDetailName"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailName"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="731dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivlogo">

            <TextView
                android:id="@+id/txtDetailSymbol"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/symbol"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtdetailStatus"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/status"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailPrice"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/txtDetailPriceD"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price_date"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailPriceTs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price_timestamp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailCirculating"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/circulating_supply"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailMarketCap"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/market_cap"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumExchanges"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_exchanges"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumPairs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_pairs"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumPairsUnmapped"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_pairs_unmapped"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstC"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_candle"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstT"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_trade"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstOB"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_order_book"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailRank"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rank"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailRankD"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rank_delta"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailHigh"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/high"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailHighT"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/high_timestamp"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="200dp"
            android:layout_height="731dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivlogo">
            <TextView
                android:id="@+id/txtDetailSymbol2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/symbol"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtdetailStatus2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/status"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailPrice2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/txtDetailPriceD2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price_date"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailPriceTs2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/price_timestamp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailCirculating2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/circulating_supply"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailMarketCap2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/market_cap"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumExchanges2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_exchanges"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumPairs2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_pairs"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailNumPairsUnmapped2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/num_pairs_unmapped"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstC2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_candle"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstT2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_trade"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailFirstOB2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/first_order_book"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailRank2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rank"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailRankD2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/rank_delta"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailHigh2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/high"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDetailHighT2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/high_timestamp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/ibEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>