<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCrypto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center" />
            <LinearLayout
                android:id="@+id/llList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/ivImage"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/ivImage">
                <TextView
                    android:id="@+id/txtCryptoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/name"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtSymbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/txtRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="15dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/llList"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/llList">
                <TextView
                    android:id="@+id/txtNameInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/txtSymbolInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Symbol"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/txtStatusInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/txtRankInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rank"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/txtPriceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Precio"
                    android:textSize="15dp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/txtRevisar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:clickable="true"
                android:text="Detalle"
                android:textSize="15dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>